# OptionsEarnings

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.do/: app.yaml
deploy/droplet/: .env.production.example  README.md  install.sh  options-earnings.service  update.sh
src/options_earnings/: cli.py  config.py
src/options_earnings/db/: connection.py  repo.py  schema.sql
src/options_earnings/ingest/: daily_candles.py  earnings.py  earnings_history.py  prices.py  runner.py  sp500.py
src/options_earnings/jobs/: scheduler.py
src/options_earnings/options/: chain.py  history.py  iv.py  job.py
src/options_earnings/web/: app.py
src/options_earnings/web/templates/: _status_fragment.html  base.html  candles.html  chain_detail.html  chain_results.html  iv_history.html  stocks.html
tests/: conftest.py  test_chain.py  test_daily_candles.py  test_earnings_history.py  test_history.py  test_ingest.py  test_iv.py  test_repo.py  test_scheduler.py  test_web.py
