[project]
name = "options-earnings"
version = "0.1.0"
description = "S&P 500 earnings + option-chain workbench (DuckDB + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "lxml>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
options-earnings = "options_earnings.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
options_earnings = ["db/schema.sql", "web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
